# cashew

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PHILOSOPHY.md  README.md  SECURITY.md  cashew_cli.py  config.example.yaml  config.yaml.template  dashboard.html  demo_persistence.py  demo_session.py  pyproject.toml  religion_experiment.py  religion_experiment_v2.py
.github/workflows/: ci.yml  release.yml
bench/: free_form_judge.py  run_free_form.py
core/: clustering.py  complete_clustering.py  config.py  context.py  daemon.py  db.py  decay.py  decay_audit.py  embedding_cache.py  embedding_service.py  embeddings.py  export.py  extractors.py  graph_utils.py  hotspots.py  llm.py  metrics.py  model_profiles.py  patterns.py  permanence.py  placement_aware_extraction.py  questions.py  retrieval.py  session.py  sleep.py  stats.py  think_cycle.py  traversal.py
dashboard/: ablation-comparison.html  ablation-random-graph.html  experiment-clean-v1.html  experiment-clean-v2.html  experiment-religion-v2.html  experiment-v2.html  experiment.html  graph.html  index.html  v2.html
dashboard/data/: experiment-clean-v1.json  experiment-religion-v2.json  experiment-religion.json  experiment-v2.json  experiment.json
data/: ablation-flat-list.json  ablation-iterative.json  ablation-random-graph.json  ablation-relational-prompt.json  ablation-swapped-labels.json  ablation-untyped-edges.json  coherence-audit.md  experiment-religion-v2.json  experiment-religion.json  health-baseline.json
docs/: architecture-diagram.html  architecture.md  build-plan.md  migration.md  persistence-layer.md  research-notes.md
extractors/: __init__.py  claude_archive.py  example_extractor.py  markdown_dir.py  obsidian.py  sessions.py  utils.py
integration/: __init__.py  complete_integration.py  openclaw.py
metrics-dashboard/: index.html
papers/: outline.md
papers/locomo-run/: COMPLETE  CRITIQUE.md  CRON.md  DEPTH-BENCH-V1.md  EXTRACTION-FIX.md  LONG-BENCH-RECON.md  MEM0-SMOKE.md  MEMBENCH-EXTENSION-SCOPE.md  MEMBENCH-RECON.md  RECON.md  (+22 more)
references/: power-laws-transcript.txt
scripts/: brain-metrics.py  calibrate_model.py  cashew_context.py  cashew_init.py  clean_room_v1.py  dashboard_server.py  dedup_nodes.py  densify_edges.py  deploy-dashboard.sh  deploy-metrics.sh  export_dashboard.py  extract_bunny_knowledge.py  extract_graph.py  extract_new_files.py  fix_orphans.py  graph_health.py  metrics_dashboard.py  migrate_embeddings.py  prune_orphans.py  quick_densify.py  round-trip-tracker.py  run_clean_v1.py  tag_domains.py  test_e2e.py  triage_inbox.py
tests/: __init__.py  conftest.py  conftest_old.py  test_bug_fixes.py  test_claude_archive_extractor.py  test_cold_start_bugs.py  test_context.py  test_daemon.py  test_decay.py  test_domains.py  test_embedding_daemon_integration.py  test_embedding_model_env.py  test_embedding_service.py  test_embeddings.py  test_extractors.py  test_integration.py  test_llm.py  test_migrate_embeddings.py  test_model_profiles.py  test_node_type_dry.py  test_packaging.py  test_patterns.py  test_permanence.py  test_prepare_ingest.py  test_referent_time.py  test_retrieval.py  test_schema_api.py  test_session.py  test_sleep.py  test_sleep_refactor.py  test_sleep_temporal_anchors.py  test_stats.py  test_think_cycle.py  test_traversal.py  test_vec_table_dim.py
(+661 files in other folders)
