[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashew-brain"
version = "1.0.0"
description = "Persistent thought-graph memory for AI agents. Provides context generation, knowledge extraction, and autonomous think cycles."
authors = [{name = "rajkripal"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "memory", "graph", "agents", "openclaw", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # anthropic removed - LLM access is external via model_fn parameter
    "numpy",
    "scikit-learn",
    "sentence-transformers",  # for embedding model
    "PyYAML",  # for config file support
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/rajkripal/cashew"
Repository = "https://github.com/rajkripal/cashew"
Issues = "https://github.com/rajkripal/cashew/issues"

[project.scripts]
cashew = "cashew_cli:main"

[tool.setuptools]
packages = ["core", "integration", "scripts"]
py-modules = ["cashew_cli"]

[tool.setuptools.package-data]
"*" = ["*.md"]